--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="#home">Inicio123</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about-us">Nosotros</a>
